# stm32f103-template

./: Cargo.toml  README.md  cargo-generate.toml  memory.x
.cargo/: config.toml
example/: hello.rs
src/: main.rs
