[package]
edition = "2021"
readme = "README.md"
name = "{{ crate_name }}"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# embedded-alloc = "0.6.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --example device` to build it.

stm32f1xx-hal = { version = "0.10.0", features = ["stm32f103", "rt", "medium"] }
nb = "1.1.0"
{% if panic_crate=='panic_halt' -%}
panic-halt = "1.0.0"
{% endif %}
{% if panic_crate=='panic-rtt-target' -%}
panic-rtt-target = "0.2.0"
rtt-target = "0.6.1"
{% endif %}
{% if panic_crate=='panic_semihosting' -%}
panic-semihosting = "0.6.0"
{% endif %}


# critical-section = "1.2.0"
# this lets you use `cargo fix`!

 

{% if defmt -%}
defmt = "1.0.1"
defmt-rtt = "1.0.0"

defmt-semihosting = "0.3.0"
{% endif %}
{% if panic_crate=='panic_probe' -%}
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
{% endif %}


[[bin]]
name = "{{ crate_name }}"
test = false
bench = false

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 'z'         # <-
overflow-checks = true  # <-

[profile.release]
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations
